--- a/text/xharmi00-appendices.tex
+++ b/text/xharmi00-appendices.tex
@@ -2,15 +2,54 @@
 % (c) Dominik Harmim
 
 
+\chapter{Results of Experimental Verification}
+\label{chap:expRes}
+
+\todo{TODO}
+
+
+\section[%
+    Experimental Verification of Detection of Atomic Sequences
+]{\texorpdfstring{%
+    Experimental Verification of Detection of Atomic \\ Sequences
+}{}}
+\label{sec:expResPhase1}
+
+\todo{TODO}
+
+
+\section[%
+    Experimental Verification of Detection of Atomicity Violations
+]{\texorpdfstring{%
+    Experimental Verification of Detection of Atomicity \\ Violations
+}{}}
+\label{sec:expResPhase2}
+
+\todo{TODO}
+
+
+
 \chapter{Contents of Attached Memory Media}
-\label{chap:memoryMedia}
+\label{chap:memMedia}
 
 \todo{TODO}
 
 
 
 \chapter{Installation and User Manual}
-\label{chap:manual}
+\label{chap:man}
+
+\todo{TODO}
+
+
+\section{Installation Manual}
+\label{sec:installMan}
+
+\todo{TODO}
+
+
+\section{User Manual}
+\label{sec:userMan}
 
 \todo{TODO}
 
