--- a/text/xharmi00-bibliography.bib
+++ b/text/xharmi00-bibliography.bib
@@ -2,11 +2,13 @@
 % (c) Dominik Harmim
 
 
-@INPROCEEDINGS{excel2019FBInfer,
+@MISC{excel2019FBInfer,
     author = {Harmim, Dominik and Marin, Valdimír and Pavela, Ondřej},
-    title = {Scalable Static Analysis Using Facebook Infer},
-    booktitle = {Excel@FIT},
-    publisher = {
+    title = {
+        Scalable Static Analysis Using Facebook Infer.
+        In \textit{Excel@FIT}
+    },
+    howpublished = {
         Brno University of Technology, Faculty of Information Technology
     },
     year = {2019}
@@ -20,39 +22,40 @@
     month = {October}
 }
 
-@INPROCEEDINGS{favStaticAnalysis,
+@MISC{favStaticAnalysis,
     author = {Vojnar, Tomáš},
-    title = {Different Approaches to Formal Verification and Analysis},
-    booktitle = {Formal Analysis and Verification},
-    publisher = {
+    title = {
+        Different Approaches to Formal Verification and Analysis.
+        Lecture Notes in Formal Analysis and Verification
+    },
+    howpublished = {
         Brno University of Technology, Faculty of Information Technology
     },
-    year = {2018},
-    note = {lecture notes}
+    year = {2018}
 }
 
-@INPROCEEDINGS{favAI,
+@MISC{favAI,
     author = {Lengál, Ondřej and Vojnar, Tomáš},
-    title = {Abstract Interpretation},
-    booktitle = {Formal Analysis and Verification},
-    publisher = {
+    title = {
+        Abstract Interpretation.
+        Lecture Notes in Formal Analysis and Verification
+    },
+    howpublished = {
         Brno University of Technology, Faculty of Information Technology
     },
-    year = {2018},
-    note = {lecture notes}
+    year = {2018}
 }
 
-@BOOK{projectPracticeMarcin2018,
+@MISC{projectPracticeMarcin2018,
     author = {Marcin, Vladimír},
     title = {
-        Static Analysis of Concurrency Problems in the Facebook Infer
-        Tool
+        Static Analysis of Concurrency Problems in the Facebook Infer Tool.
+        Project practice
     },
-    publisher = {
+    howpublished = {
         Brno University of Technology, Faculty of Information Technology
     },
-    year = {2018},
-    note = {project practice}
+    year = {2018}
 }
 
 @BOOK{programAnalysisNielson,
@@ -124,7 +127,8 @@
     pages = {269\,--\,295},
     booktitle = {
         Proceedings of the International Workshop Programming Language
-        Implementation and Logic Programming, PLILP'92
+        Implementation and Logic Programming.
+        \textnormal{PLILP'92}
     },
     series = {
         Leuven, Belgium, 13\,--\,17 August 1992, Lecture Notes in Computer
@@ -136,15 +140,16 @@
     doi = {10.1007/3-540-55844-6_101}
 }
 
-@INPROCEEDINGS{favLatticesAndFixpoints,
+@MISC{favLatticesAndFixpoints,
     author = {Vojnar, Tomáš},
-    title = {Lattices and Fixpoints for Symbolic Model Checking},
-    booktitle = {Formal Analysis and Verification},
-    publisher = {
+    title = {
+        Lattices and Fixpoints for Symbolic Model Checking.
+        Lecture Notes in Formal Analysis and Verification
+    },
+    howpublished = {
         Brno University of Technology, Faculty of Information Technology
     },
-    year = {2018},
-    note = {lecture notes}
+    year = {2018}
 }
 
 @ARTICLE{staticRaceDetectorTruePositive,
@@ -152,7 +157,7 @@
     title = {A~True Positives Theorem for a~Static Race Detector},
     journal = {Proceedings of ACM Programming Languages},
     volume = {3},
-    number = {POPL},
+    number = {POPL'19},
     month = {January},
     year = {2019},
     issn = {2475-1421},
@@ -211,24 +216,6 @@
     address = {New York, NY, USA}
 }
 
-@INPROCEEDINGS{racerX,
-    author = {Engler, Dawson R. and Ashcraft, Ken},
-    title = {
-        RacerX: Effective, Static Detection of Race Conditions and Deadlocks
-    },
-    booktitle = {
-        Proceedings of the Nineteenth ACM Symposium on Operating Systems
-        Principles
-    },
-    series = {SOSP'03},
-    year = {2003},
-    ISBN = {1-58113-757-5},
-    pages = {237\,--\,252},
-    doi = {10.1145/945445.945468},
-    publisher = {ACM},
-    address = {New York, NY, USA}
-}
-
 @ARTICLE{racerD,
     author = {
         Blackshear, Sam and Gorogiannis, Nikos and O'Hearn, Peter W. and
@@ -237,7 +224,7 @@
     title = {RacerD: Compositional Static Race Detection},
     journal = {Proceedings of ACM Programming Languages},
     volume = {2},
-    number = {OOPSLA},
+    number = {OOPSLA'18},
     month = {October},
     year = {2018},
     issn = {2475-1421},
@@ -261,11 +248,11 @@
     address = {New York, NY, USA}
 }
 
-@INBOOK{dataflowAnalysisApproaches,
+@INCOLLECTION{dataflowAnalysisApproaches,
     author = {Sharir, Micha and Pnueli, Amir},
     title = {Two approaches to interproceduraldata flow analysis},
     booktitle = {Program Flow Analysis: Theory and Applications},
-    note = {eds., Muchnick, Steven S. and Jones, Neil D.},
+    editor = {Muchnick, Steven S. and Jones, Neil D.},
     chapter = {7},
     pages = {189\,--\,211},
     year = {1981},
@@ -291,8 +278,9 @@
     title = {Verifying Concurrent Programs Using Contracts},
     booktitle = {
         2017 IEEE International Conference on Software Testing, Verification
-        and Validation (ICST)
+        and Validation
     },
+    series = {ICST'17},
     publisher = {IEEE},
     pages = {196\,--\,206},
     ISBN = {9781509060313},
